# phoenixgithub

./: .env.example  .gitignore  INTERNAL_README.md  Makefile  README.md  RELEASING.md  app-manifest.json  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
docs/: README.md
scripts/: create_labels.py  install_merge_done_workflow.py  pre_release.py  reset_repo_state.py
slides/: README.md  index.html
src/phoenixgithub/: __init__.py  cli.py  config.py  github_app.py  github_client.py  models.py  orchestrator.py  provider.py  state.py  watcher.py  webhook.py
src/phoenixgithub/agents/: base.py  coder.py  failure_analyst.py  planner.py  pr_agent.py  tester.py
src/phoenixgithub/tools/: __init__.py  git_utils.py  path_utils.py
tests/: test_tools_utils.py
